--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,12 @@
             <version>2.9.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
